# newKalziumPse

./: CMakeLists.txt  INSTALL  Idea  element.cpp  element.h  elementGraphicsLabel.cpp  elementGraphicsLabel.h  elementLabel.cpp  elementLabel.h  elementitem.cpp  elementitem.h  elementitem_p.cpp  elementitem_p.h  main.cpp  mainWindow.cpp  mainWindow.h  periodictablescene_p.cpp  periodictablescene_p.h  periodictableview.cpp  periodictableview.h  periodsystembase.cpp  periodsystembase.h  statemachine.cpp  statemachine.h
cmake/modules/: FindCFitsio.cmake  FindGMM.cmake  FindINDI.cmake  FindMarbleWidget.cmake
